2014-06-10  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Added the function
	"graph_snmp_traps_treemap".

	* include/functions_netflow.php: Fixed a little error.

	* operation/snmpconsole/snmp_view.php: Fixed the pagination.
	Now is possible to see a treemap graph of oid per agent with
	the snmptraps received.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager.php, extensions/update_manager/*,
	include/functions_config.php: remove the old update manager. Bye bye
	my old friend.
	
	* godmode/update_manager_xxx -> godmode/update_manager,
	godmode/update_manager/* -> godmode/update_manager/*,
	godmode/menu.php: rename
	the update manager.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php,
	include/functions_update_manager.php, index.php,
	general/logon_ok.php, extensions/update_manager.php,
	godmode/update_manager_xxx/update_manager.online.php: work in the
	first version of new update manager.

2014-06-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager_xxx/update_manager.online.php,
	include/functions_update_manager.php,
	include/javascript/update_manager.js,
	include/ajax/update_manager.ajax.php: work in the first version of
	new update manager.

2014-06-10  Mario Pulido <mario.pulido@artica.es>

	* pandoradb_data.sql: Fixed bug in plugin exec #803

2014-06-10 Hirofumi Kosaka <kosaka@rworks.jp>

	* operation/agentes/ver_agente.php,
	godmode/massive/massive_delete_modules.php: Fixed bug that all
	agents' module the user can view could be targets of deletion,
	if the user has an AW privilege for any.

2014-06-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_api.php: Added the parameter
	"address resolution" to the functions
	"api_get_netflow_get_data" and "api_get_netflow_get_stats".

	* include/functions_netflow.php: Added the parameter
	"address resolution" to the functions "netflow_get_data",